syntax = "proto3";

service KafkaService {
    rpc CreateProducer(CreateProducerRequest) returns (CreateProducerResponse);
    rpc CreateConsumer(CreateConsumerRequest) returns (CreateConsumerResponse);
    rpc Consume(ConsumeRequest) returns (stream KafkaMessage);
    rpc SendMessage(SendMessageRequest) returns (SendMessageResponse);
}

message CreateProducerRequest {
    string bootstrap_servers = 1;
}

message CreateProducerResponse {}

message CreateConsumerRequest {
    string bootstrap_servers = 1;
    string group_id = 2;
    string topic = 3;
}

message CreateConsumerResponse {}

message ConsumeRequest {
    string topic = 1;
}

message KafkaMessage {
    string message = 1;
}

message SendMessageRequest {
    string topic = 1;
    string message = 2;
}

message SendMessageResponse {}
